# OpenHarmony

hirtc_camera_native/: build-profile.json5  oh-package.json5
hirtc_camera_native/AppScope/: app.json5
hirtc_camera_native/AppScope/resources/base/element/: string.json
hirtc_camera_native/entry/: oh-package-lock.json5
hirtc_camera_native/entry/src/main/: module.json5
hirtc_camera_native/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp  ohos_audio.cpp  ohos_audio.h  ohos_camera.cpp  ohos_camera.h  ohos_render.cpp  ohos_render.h  wav_wrapper.cpp  wav_wrapper.h
hirtc_camera_native/entry/src/main/cpp/types/libentry/: index.d.ts  oh-package.json5
hirtc_camera_native/entry/src/main/ets/pages/: Index.ets
hirtc_camera_native/entry/src/main/resources/base/element/: string.json
hirtc_camera_native/entry/src/main/resources/zh_CN/element/: string.json
